Finish transferring content and notes from old overview page

--- a/docs/alkiln/intro.mdx
+++ b/docs/alkiln/intro.mdx
@@ -42,9 +42,17 @@ ALKiln topics you can explore:
 - [Security](security.mdx): Stay safe by using best practices and find out how we protect you too
 
 
+## What can I test with these tests? {#what-test}
+
+There are two main purposes for ALKiln tests right now.
+
+1. You can start using the [simple "it runs" test](setup.mdx#first-test) right away. It just makes sure that your interview starts without an error. Even that can be useful. For example, if you forget to commit a template to GitHub, that test will catch it.
+1. The next type of testing comes a while after that, once your interview has stabilized. For example, the variable names are less likely to change. Then you can add more comprehensive ALKiln tests. After that, they will keep an eye on things for you. While you refine your interview by changing wording, the order of fields and pages, adding translations, and so on, the ALKiln tests will let you know if and when your changes break your interview.
+
+
 ## Why automate testing? {#why-test}
 
-This may not be a good sales pitch, but you don't always need automated tests. Automated tests need to be updated along with your code. That may not be worth your time for some projects or at some stages in a project.
+This may not be a good sales pitch, but you do not always need automated tests. Automated tests need to be updated along with your code. That may not be worth your time for some projects or at some stages in a project.
 
 That said, the more complex your project gets the more useful automated tests can be.
 
