--- a/docs/alkiln/writing_tests.mdx
+++ b/docs/alkiln/writing_tests.mdx
@@ -28,7 +28,7 @@ This page describes your tests files and how to write tests <!-- , run tests, --
 
 ## Do _I_ need to read this? {#who}
 
-If you are writing tests <!-- , running tests, --> or need to learn about test files, this page is for you.
+If you are writing tests <!-- , running tests, --> or need to learn about test files, this page is for you. It is easier to write the tests if you have access to the interview YAML code and understand a bit about docassemble.
 
 
 ## Quick refresher {#refresh}
