--- a/docs/alkiln/writing_tests.mdx
+++ b/docs/alkiln/writing_tests.mdx
@@ -269,7 +269,7 @@ Use the "Story Table" Step to fill in multiple fields on multiple pages. It is t
 
 <NeedProxyVars/>
 
-You can use the [story table generator](https://plocket.github.io/alkiln_story/) to generate a first draft of a full test file that uses a Story Table based on an interview you have finished.
+You can use the [story table generator](#alkiln_story) to generate a first draft of a full test file that uses a Story Table based on an interview you have finished.
 
 <!--
 TODO: add an extensive instructions section to the generator. Something like:
@@ -346,11 +346,11 @@ The Story Table does not care about extra rows that never get used. This can mak
 
 That can be a sign that a question that the user *should* have seen got skipped or that there is a typo or mistake in the test.
 
-Because of this, the ALKiln report shows a list of unused rows for each table. You can check the report of passing tests to make sure none of the important rows got skipped.
+Because of this, the ALKiln [report](#report) shows a list of unused rows for each table. You can check the report of passing tests to make sure none of the important rows got skipped.
 :::
 
 :::info
-You can use this Step to [upload files](#upload).
+You can use this Step to [upload files](#upload) and [fill in a signature](#sign).
 :::
 
 
@@ -688,7 +688,9 @@ field:
 
 ### Special HTML {#special-html}
 
-Most authors add this extra HTML to the `post` section of their `default screen parts`. For example:
+This HTML lets ALKiln set the correct variables and avoid other problems.
+
+Most authors add this extra HTML to the `post` section of their [`default screen parts` block](https://docassemble.org/docs/initial.html#default%20screen%20parts). They do that by including the AssemblyLine's al_package.yml file or by adding this code themselves. For example:
 
 ```yml
 default screen parts:
@@ -705,7 +707,7 @@ default screen parts:
     <div id="trigger" data-variable="${ encode_name(str( user_info().variable )) }" aria-hidden="true" style="display: none;"></div>
 ```
 
-AssemblyLine's al_package.yml file, if you include it, already adds that HTML for you. Otherwise, we strongly recommend adding it yourself as the docs described.
+This code will be invisible on the page. No one will see it. If you already have something in your `post:` default screen part, just copy the code and paste it in after whatever you have there. Putting it at the end can avoid messing up other HTML.
 
 **Do I need this?**
 
@@ -737,7 +739,7 @@ Text-type fields are fields where the user needs to type text. The [default fiel
 - `datatype: text`
 - `datatype: integer`
 - `datatype: number`
-- `input type: area` accept text for their value.
+- `input type: area` fields are textarea fields and also accept text for their value.
 
 You can see more [about `datatype`s and `input type`s in the docassemble docs](https://docassemble.org/docs/fields.html#data%20types).
 
@@ -755,7 +757,7 @@ Example linear Steps:
 
 ```gherkin
   And I set the variable "users[0].favorite_bear.name.first" to "Ultraman"
-  And I set the variable "users[0].favorite_bear.why" to "Why not?\nSeems ok to like Ultraman."
+  And I set the variable "users[0].favorite_bear.why" to "Why not?\nIt seems ok to like Ultraman."
 ```
 
 Example Story Table Step:
@@ -763,8 +765,12 @@ Example Story Table Step:
 ```gherkin
     | var | value |
     | users[0].favorite_bear.name.first | Ultraman |
-    | users[0].favorite_bear.why | Why not?\nSeems ok to like Ultraman. |
+    | users[0].favorite_bear.why | Why not?\nIt seems ok to like Ultraman. |
 ```
+
+:::info New lines
+If an answer needs to have multiple lines, you can still only use one line in your test code. Instead use `\n` where a new line would be. See examples.
+:::
 
 
 ### Dates {#dates}
@@ -832,7 +838,7 @@ Example of setting the yesno checkbox to "yes" in a Story Table Step:
 ```
 
 
-### `noyes`
+### `noyes` {#noyes}
 
 Avoid `noyes` type fields. For one thing, using `noyes` will make you edit the code you get from the [ALKiln Story Table Step generator](https://github.com/plocket/alkiln_story) more. For another, we've found that humans tend to find those confusing too.
 
@@ -1170,7 +1176,7 @@ Examples for variation 1 - the phrase **does exist** on the page:
 
 The `<page text>` should be inside [double quotation marks](https://www.compart.com/en/unicode/U+0022) and **must never** itself contain double quotation marks inside it. Since docassemble interview text usually has special quotation marks, that is usually easy. See the [troubleshooting section on missing phrases](troubleshooting.mdx#missing-phrase) that talks about special characters.
 
-Unlike many other Steps, checking phrases is **language specific**. That is, if you want to test translations as well, you will have to use [extra code](#gherkin-sampler) in your test.
+Unlike many other Steps, checking phrases is **language specific**. That is, if you want to test translations as well, you will have to use [an "Examples" table](#gherkin-sampler) in your test.
 
 
 ### `the text in the JSON variable "<variable name>" should be` {#compare-json}
@@ -1303,6 +1309,26 @@ This Step can help humans keep track of what page the tests are on. It will also
 <!-- ### `Then an element should have the id "some_HTML_element_id"` -->
 
 
+## Generate a Story Table {#alkiln_story}
+
+You can use the [story table generator](https://plocket.github.io/alkiln_story/) to generate a Scenario draft. Depending on your interview's code you might need to edit the table for it to work properly, but it can give you a good start.
+
+Follow these instructions to use the generator:
+
+1. If you don't have one already, [add a new test file](#how-do-i-add-a-new-test-file). You can leave out the Scenario.
+1. Ensure your server config is set up to [show debug info](https://docassemble.org/docs/config.html#debug).
+1. Run your interview manually until you reach the page you want the story table to get to.
+1. Open the "source" display of the interview. Currently, that looks like angle brackets, `</>`, in the header of the page.
+1. Note the `id` of the page.
+1. Tap the "Show variables and values" button. It will open a new tab showing a big JSON object.
+1. Copy all the text on that page.
+1. Go to the [story table generator](https://plocket.github.io/alkiln_story/).
+1. Paste the JSON into the text area there, as instructed.
+1. Use the other input fields to help finalize your Scenario, including the page `id`.
+1. Copy the Scenario that has been generated for you.
+1. Paste that into the already prepared test file.
+
+
 ## Test file anatomy {#test-files}
 
 Your tests files have the code that tells ALKiln how to answer questions in your interview and do other things. The code may look different than other code you have seen, but it is still code. It is still rigid and needs you to use the right syntax and spelling.
@@ -1319,7 +1345,25 @@ In test files, you use [Gherkin](https://cucumber.io/docs/gherkin/) syntax and [
 
 Go to the Playground of your Project. Tap the "Folders" dropdown menu. Tap on Sources. Add a new file that ends in the extension `.feature`. For example, `has_children.feature`.
 
-You can then add the code for your tests. Follow [this link to see a simple test](setup.mdx/#first-test) that any interview can run right from the start.
+Add this to the blank file:
+
+```gherkin
+Feature: A description of the category of the tests you will write in this file
+
+Scenario: The specific situation that this test is written for
+  Given I start the interview at "name_of_the_interview_file_to_test.yml"
+```
+
+Change the parts you need to change. Example:
+
+```gherkin
+Feature: I have children
+
+Scenario: I allow unsupervised visitation
+  Given I start the interview at "protective_order.yml"
+```
+
+You can then add the code for your tests.
 
 
 ### Some rules {#file-rules}
@@ -1344,7 +1388,7 @@ ALKiln only allows you to use some Gherkin keywords. Those are:
 - [`Scenario:`/`Example:`](https://cucumber.io/docs/gherkin/reference/#example) - We recommend you use `Scenario`. **Make the `Scenario` descriptions unique** because ALKiln will use them in the names of the reports it creates for you. This keyword is different from the plural `Examples`/`Scenarios`.
 - [`Scenario Outline:`](https://cucumber.io/docs/gherkin/reference/#scenario-outline)
 - [`Examples:/Scenarios:`](https://cucumber.io/docs/gherkin/reference/#examples) - We recommend you use `Examples`. This can help you test translations, as shown below. When a `Scenario Outline` has an `Examples` table, the test will run at least once for each row in the table. This keyword is different from the singular `Scenario`/`Example`.
-- Theses keywords that can start a Step - [`Given`](https://cucumber.io/docs/gherkin/reference/#given), [`When`](https://cucumber.io/docs/gherkin/reference/#when), [`Then`](https://cucumber.io/docs/gherkin/reference/#then), and [`And`](https://cucumber.io/docs/gherkin/reference/#and).
+- Any of these keywords that can start a Step - [`Given`](https://cucumber.io/docs/gherkin/reference/#given), [`When`](https://cucumber.io/docs/gherkin/reference/#when), [`Then`](https://cucumber.io/docs/gherkin/reference/#then), and [`And`](https://cucumber.io/docs/gherkin/reference/#and). They look different, but that is for us humans. They can be used interchangeably.
 
 :::tip Unique descriptions
 It is useful to give a `Scenario` or a `Scenario Outline` a [unique description that you can remember](#scenario-descriptions).
@@ -1584,9 +1628,9 @@ These are the only required inputs for <KittyLitter/> tests. We are listing them
 
 You can see examples of these inputs in the correct [ALKiln file](#workflows-examples).
 
-- `SERVER_URL` is the url of the new docassemble server GitHub just created. Another step in the same file defined that value.
-- `DOCASSEMBLE_DEVELOPER_API_KEY` is a developer API key for a developer on the new server. Another step in the same file defined that value.
-- `INSTALL_METHOD` is an internal value ALKiln needs from <KittyLitter/> tests. The value in ALKiln's file is the correct value.
+- `SERVER_URL` is the url of the new docassemble server GitHub just created. Use the value that an earlier step created. You can see that in the example file.
+- `DOCASSEMBLE_DEVELOPER_API_KEY` is a developer API key for a developer on the new server. Use the value that an earlier step created. You can see that in the example file.
+- `INSTALL_METHOD` is an internal value ALKiln needs from <KittyLitter/> tests. The value in ALKiln's example file is the correct value.
 
 
 ### Optional inputs for all GitHub tests {#optional-inputs}
@@ -1597,7 +1641,7 @@ You can add some optional inputs to the workflow file of any tests that run on G
 
 The options are:
 
-- `ALKILN_VERSION` lets you use a specific version of the ALKiln framework for your tests. It can be useful for [security](security.mdx#freeze-framework) or for trying out experimental versions of the ALKiln framework. The default value is the latest version.
+- `ALKILN_VERSION` lets you use a specific version of the ALKiln framework for your tests. It can be useful for [security](security.mdx#freeze) or for trying out experimental versions of the ALKiln framework. The default value is the latest version.
 - `ALKILN_TAG_EXPRESSION` is the "tag expression" to use to limit which tests to run. These docs describe tags in the [Gherkin keywords section](#gherkin-keywords). The default is no tag expression so that all the tests run.
 - (Extra Advanced) `DOCASSEMBLECLI_VERSION` is the version of docassemblecli to install. If this means nothing to you then you can probably ignore it. You can also ask us about this.
 
@@ -1620,7 +1664,7 @@ Use these inputs in the same way and in the same places as the required inputs. 
 ```
 
 
-### Optional inputs for <GTOYS/> tests {#githubNyou-optional-inputs}
+### Optional inputs just for <GTOYS/> tests {#githubNyou-optional-inputs}
 
 **This is for:** <GTOYS/> tests
 
@@ -1650,7 +1694,7 @@ Use these inputs in the same way and in the same places as the required inputs. 
 [^slow]: This also sometimes affects tests that fail due to genuine errors. Sadly, these types of failures look the same to ALKiln as a server reloading. That means that increasing the maximum server reload time will make some kinds of tests take an extra long time to fail.
 
 
-### Optional inputs for <KittyLitter/> tests {#sandbox-optional-inputs}
+### Optional inputs just for <KittyLitter/> tests {#sandbox-optional-inputs}
 
 **This is for:** <KittyLitter/> tests
 
@@ -1739,7 +1783,7 @@ See [an example](https://github.com/IHaskell/IHaskell/blob/60a750f5b038a17717609
 You can read [GitHub's documentation about many other ways to trigger workflows](https://docs.github.com/en/actions/using-workflows/triggering-a-workflow).
 
 
-### Make a GitHub issue when tests fail
+### Make a GitHub issue when tests fail {#issue}
 
 To make a GitHub issue when tests fail, you can add the below code under the last line of text in the file. It might look like you need to create a GitHub secret for this, but you should avoid that. GitHub already has all these values.
 
@@ -1879,37 +1923,37 @@ You can [make secrets for individual GitHub repositories](https://docs.github.co
 
 1. Secrets are useful for creating values with sensitive information since no one can see those values. For example, with the ["sign in" Step](#sign-in). Here is one example of using a secret in a workflow file:
 
-```yml
-# other code
-
-env:
-  ALKILN_USER_EMAIL: "${{ secrets.ALKILN_USER_EMAIL }}"
-  ALKILN_USER_PASSWORD: "${{ secrets.ALKILN_USER_PASSWORD }}"
-
-job:
+  ```yml
   # other code
-```
 
-Remember to create a [separate account](security.mdx#test_accounts) for that "user".
+  env:
+    ALKILN_USER_EMAIL: "${{ secrets.ALKILN_USER_EMAIL }}"
+    ALKILN_USER_PASSWORD: "${{ secrets.ALKILN_USER_PASSWORD }}"
+
+  job:
+    # other code
+  ```
+
+  Remember to create a [separate account](security.mdx#test_accounts) for that "user".
 
 2. GitHub secrets are useful for sharing values between GitHub organization repositories. All the repositories of a GitHub organization can see its secrets, so you can affect all of those repositories at once from one location.
 
-For example, suppose Mo'nique has a GitHub organization named PolarisLaw. That organization has several repositories. Every test in every repository uses the value "small\_bear" as an answer to a question. Next month, though, the firm might need to change that value to "large\_bear". Mo'nique would have to edit that value in every test in every repository. Instead, she makes a GitHub secret in the PolarisLaw account called `ALKILN_BEAR_SIZE` and sets it to `small_bear`. Then she uses it in an environment variable she puts in all the workflow files in all the repositories.
+  For example, suppose Mo'nique has a GitHub organization named PolarisLaw. That organization has several repositories. Every test in every repository uses the value "small\_bear" as an answer to a question. Next month, though, the firm might need to change that value to "large\_bear". Mo'nique would have to edit that value in every test in every repository. Instead, she makes a GitHub secret in the PolarisLaw account called `ALKILN_BEAR_SIZE` and sets it to `small_bear`. Then she uses it in an environment variable she puts in all the workflow files in all the repositories.
 
-```yml
-env:
-  ALKILN_BEAR_SIZE: "${{ secrets.ALKILN_BEAR_SIZE }}"
-```
+  ```yml
+  env:
+    ALKILN_BEAR_SIZE: "${{ secrets.ALKILN_BEAR_SIZE }}"
+  ```
 
-She can then use that environment variable in her tests:
+  She can then use that environment variable in her tests:
 
-```gherkin
-  I set the variable "bear_size" to the GitHub secret "ALKILN_BEAR_SIZE"
-```
+  ```gherkin
+    I set the variable "bear_size" to the GitHub secret "ALKILN_BEAR_SIZE"
+  ```
 
-Next month, if PolarisLaw needs to change that value, Mo'nique can just edit the value of that secret and change it to `large_bear`. All the tests will use the new value without her changing anything else.
+  Next month, if PolarisLaw needs to change that value, Mo'nique can just edit the value of that   secret and change it to `large_bear`. All the tests will use the new value without her changing   anything else.
 
-Why not create secrets on your server for <AutoDIY/> tests? On your server all config values are already secret because only authorized people can see them, so they are just like any other [environment variable](#env-vars). And all of your server's interviews can see and share those config values already. I know, not quite as exciting.
+  Why not create secrets on your server for <AutoDIY/> tests? On your server all config values are already secret because only authorized people can see them, so they are just like any other [environment variable](#env-vars). And all of your server's interviews can see and share those config values already. I know, not quite as exciting.
 
 <!--
 TODO: [Is this unnecessary now that inputs and env vars are so separate?] FAQ: How are GitHub inputs different than env vars?
@@ -2207,9 +2251,9 @@ The console output should include at least one of these items, from top to botto
 <!-- TODO: put in troubleshooting: In GitHub, if the tests are having trouble, you might want to look at early steps too -->
 
 
-## Test artifacts {#artifacts}
+## Test output/artifacts {#artifacts}
 
-**This is for**: all tests.
+**This is for**: all tests
 
 Once the tests are finished, ALKiln creates the test run "artifacts" - files and folders you can examine, like an archaeologist, to understand what happened.
 
@@ -2232,22 +2276,22 @@ For <AutoDIY/> tests, you can see and download the artifacts on the final page. 
 - A link to download the zip file with all the artifacts.
 - The [report file](#report).
 - The [debug log file](#debug-log).
-- Any pictures of error screens, along with that screen's HTML file.
+- Any [pictures of error screens, along with that screen's HTML file](#error-pics).
 - A list of Scenarios with the [contents of their Scenario folders](#scenario-artifacts).
-- The test console logs. <!-- TODO: Why can't people download this as a file? I guess it will be in the verbose log eventually? -->
+- The test [console logs](#console). <!-- TODO: Why can't people download this as a file? I guess it will be in the verbose log eventually? -->
 
 <!-- - A list of Scenarios with their the contents of their Scenario folders including individual report, error screenshots and HTML pages, files you downloaded or created with Steps  -->
 
 On that page, when you click on the link to a file, you will see that file in a new browser window and can download it there.
 
-The main artifact folder contains all the other artifacts. Its name includes the time the tests started in UTC format. When in GitHub, GitHub wraps folder up in a zip file. The zip file's name includes the UTC time that the GitHub run started.
+For all tests, the main artifact folder contains all the other artifacts. Its name includes the time the tests started in UTC format. When in GitHub, GitHub wraps the folder up in a zip file. The zip file's name includes the UTC time that the GitHub run started.
 
 The ALKiln folder contains these files and folders:
 
 - [report.txt](#report)
 - [debug_log.txt](#debug-log)
 - Copies of all [screenshots and HTML files](#error-pics) of pages all that caused errors
-- Scenario folders which have:
+- [Scenario folders](#scenario-artifacts) which have:
 <ScenarioDir/>
 
 
@@ -2418,7 +2462,7 @@ They have other uses too. [Block ids are helpful for docassemble features and ca
 You write each Scenario's description in your [test files](#test-files). ALKiln includes those descriptions in the names of [test output folders](#scenario-artifacts), [error screenshot files](#error-pics), and [report](#report) headings, so try to write something different for each one - something that will help you later. It will help you identify what happened with each test.
 
 
-### Extra HTML {#html-tip}
+### Special HTML {#html-tip}
 
 If your package is leaving out the al_package.yml file from the Assembly Line package, make sure to add some [special ALKiln-specific HTML](#special-html) to your interview to let ALKiln work right.
 
@@ -2437,7 +2481,7 @@ Copy old Scenarios or Story Tables to help you make new ones. You don't have to 
 
 ### Values of choices {#choice-values-tip}
 
-In questions with choices, use both labels and values. See [docassemble's documentation on buttons](https://docassemble.org/docs/fields.html#field%20with%20buttons) to read about those key-value pairs. The key is the label and the value is... the value! You can use this for other fields with choices, like radio buttons.
+In questions with choices, use both labels and values. See [docassemble's documentation on buttons](https://docassemble.org/docs/fields.html#field%20with%20buttons) to read about those key-value pairs. The key is the label and the value is... the value ! You can use this for other fields with choices, like radio buttons.
 
 :::caution Unhelpful
 Just labels:
@@ -2488,6 +2532,8 @@ fields:
 ```
 :::
 
+If your user chooses "Lilac", docassemble will set `favorite_color` to `purple2`.
+
 The test:
 
 ```gherkin
@@ -2505,7 +2551,13 @@ fields:
       - 🔮 Dark lilac: purple2
 ```
 
-The test stays the same. The value can even be the same as the label:
+The test stays the same:
+
+```gherkin
+  And I set the variable "favorite_color" to "purple2"
+```
+
+The value can even be the same as the label if you want:
 
 ```yaml
 fields:
@@ -2517,7 +2569,7 @@ fields:
 ```
 
 :::tip
-As a bonus, this also makes your interview easier to translate.
+As a bonus, using labels and values also makes your interview easier to translate. If you use only labels, translations will break your code.
 :::
 
 
